feat: simplify Jungian terminology in UI and AI prompt for general users

--- a/public/analysis-result.html
+++ b/public/analysis-result.html
@@ -181,7 +181,7 @@
         <!-- Archetypes -->
         ${analysis.archetypes && analysis.archetypes.length > 0 ? `
           <div class="card mb-lg fade-in" style="animation-delay: 0.2s;">
-            <h2 style="color: var(--color-primary-light); margin-bottom: 1rem;">🎭 발견된 원형 (Archetypes)</h2>
+            <h2 style="color: var(--color-primary-light); margin-bottom: 1rem;">🎭 꿈 속 상징적 인물 (내면의 원형)</h2>
             <ul style="list-style: none; padding: 0;">
               ${analysis.archetypes.map(archetype => `
                 <li style="background: var(--color-surface-light); padding: 1rem; border-radius: var(--radius-sm); margin-bottom: 0.5rem;">
@@ -218,7 +218,7 @@
         <!-- Individuation Insights -->
         ${analysis.individuation_insights ? `
           <div class="card mb-lg fade-in" style="animation-delay: 0.8s;">
-            <h2 style="color: var(--color-accent); margin-bottom: 1rem;">🌟 개성화 과정 인사이트</h2>
+            <h2 style="color: var(--color-accent); margin-bottom: 1rem;">🌟 내면 성장을 위한 조언</h2>
             <p style="line-height: 1.8;">${analysis.individuation_insights}</p>
           </div>
         ` : ''}
